2004-01-26  Paolo Nenzi <p.nenzi@ieee.org>

	*   tests/cider: Added example files for cider simulator.

2004-01-25  Paolo Nenzi <p.nenzi@ieee.org>

	*   configure.in, acconfig.h: Added configure options for the
	    following debug symbols: ASDEBUG, D_DBG_BLOCKTIMES,
	    D_DBG_SMALLTIMES, NEWPRED.

2004-01-23  Paolo Nenzi <p.nenzi@ieee.org>

	*   xgraph: Added xgraph plotting program. It can be added to
	    the ngspice binaries by adding --enable-xgraph in the 
	    configuration phase. 

2004-01-21  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/include/ifsim.h, src/include/cktdefs.h, src/frontend/spiceif.c,
	    src/frontend/shyu.c, src/spicelib/cktntask.c: Applied the options 
	    patch made by Charles Williams <C.D.H.Williams@exeter.ac.uk>

2004-01-20  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/maths/ni/*: Cleaned up code removing unnecessary includes.

2004-01-15  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/spicelib/devices/{cccs,ccvs,vccs,vcvs}/*: cleaned up the code.

	*   src/spicelib/devices/csw/*, src/spicelib/devices/sw/*: cleaned
	    up the code.
	    
	*   DEVICES: updated switches status.    

2004-01-14  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/spicelib/devices/txl/*: Added TXLunsetup function to allow
	    for multiple simulations. 
	
	*   DEVICES: Updated txl status. 

2004-01-11  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/spicelib/analysis/*: Removed redundant includes. File stdio.h
	    is already included via ngspice.h.

2004-01-10  Paolo Nenzi <p.nenzi@ieee.org>

	*   configure.in: changed version to rework-15pre2.

	*   src/frontend/{com_history.c, cpitf.c, display.h, evaluate.c,
	    inpcom.c, misccoms.c, parser/glob.c, plotting/x11.c, resource.c,
	    runcoms.c, signal_handler.c, subckt.c, variable.c}
	    src/include/{ftedev.h, ngspice.h}
	    src/misc{ivars.c, Makefile.am, string.c, tilde.c, tilde.h, util.c,
	    util.h}
	    src/{main.c, nghelp.c, ngmultidec.c}
	    configure.in:
	    