@@ -4,16 +4,13 @@ Author: 1985 Thomas L. Quarles
 **********/
 
 #include "ngspice.h"
-#include <stdio.h>
 #include "cktdefs.h"
 #include "isrcdefs.h"
 #include "sperror.h"
 #include "suffix.h"
 
 int
-ISRCacLoad(inModel,ckt)
-    GENmodel *inModel;
-    CKTcircuit *ckt;
+ISRCacLoad(GENmodel *inModel, CKTcircuit *ckt)
 {
     ISRCmodel *model = (ISRCmodel*)inModel;
     ISRCinstance *here;
